--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "ionicons": "^7.4.0",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
     "tslib": "^2.3.0",
