--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "chart.js": "^4.5.0",
     "ionicons": "^7.4.0",
     "ng2-charts": "^4.1.1",
+    "ngx-slick-carousel": "^19.0.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -53,6 +55,8 @@
     "@capacitor/cli": "7.4.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
+    "@types/slick-carousel": "^1.6.40",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "eslint": "^8.57.0",
