--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ionic build && cp static.json www/",
+    "build": "npx ionic build && cp static.json www/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
